next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the CVS log comments.


CHANGES - Current Version:
--------------------------


Version 1.4.0 (2005-03-23)
--------------------------

 - Added initial version of .NET bindings, contributed by Graham Sims in
   mitab/contrib/dotnet directory (bug 992)

 - Added support for Datum Id field in .MAP header, this is new in MapInfo
   7.8+ and solves problem with multiple datums with same params (bug 910) 

 - Fixed internal integer coordinates rounding error (bug 894)

 - Fixed potential memory leaks in error conditions in mitab_feature.cpp
   and mitab_rawbinblock.cpp (bug 881)

 - Support pen width bigger than 7. Note that any pen bigger than 10 are 
   considered as point, not pixel. (bug 683)

 - Updated list of datum parameters from data made available by Bill Wemple
   from MapInfo on directionsmag.com: 7 new datum defns and 1 fixed.
   List of ellipsoids also updated (Bug 608, patch by Uffe K.)

 - Do not output a BG color in style string for transparent brushes (bug 693)

 - mitab_tabfile.cpp: Several fixes for TABFile::Open() when loading the
   tabfile fails. (provided by Stephen Cheesman). 

 - mitab_mapfile.cpp: Fixed error return value in LoadNextMatchingObjectBlock()
   per http://bugzilla.remotesensing.org/show_bug.cgi?id=615. NFW

 - mitab_ogr_datasource.cpp: Modified CreateLayer() to use 
   -1000,-1000,1000,1000 bounds for GEOGCS much like in mitab_bounds.cpp. 
   This ensures that geographic files in the range 0-360 works as well as
   -180 to 180.


Version 1.3.0 (2004-07-07)
--------------------------

 - Use tab as default delimiter (if none is explicitly specified) when 
   reading .MIF/.MID files (Anthony D, bug 37)  We still generate new files 
   using comma as delimiter.
