@@ -1,5 +1,5 @@
 /**********************************************************************
- * $Id: mitab_bounds.cpp,v 1.5 2005-03-22 23:24:54 dmorissette Exp $
+ * $Id: mitab_bounds.cpp,v 1.6 2005-03-31 22:00:38 dmorissette Exp $
  *
  * Name:     mitab_bounds.cpp
  * Project:  MapInfo TAB Read/Write library
@@ -30,7 +30,11 @@
  **********************************************************************
  *
  * $Log: mitab_bounds.cpp,v $
- * Revision 1.5  2005-03-22 23:24:54  dmorissette
+ * Revision 1.6  2005-03-31 22:00:38  dmorissette
+ * Added bounds entry to match datum 1011 based on MapInfo's "Svenska
+ * rikssystemet, 2,5 gon väst (RT 90 7 parametrar)" (bug 997)
+ *
+ * Revision 1.5  2005/03/22 23:24:54  dmorissette
  * Added support for datum id in .MAP header (bug 910)
  *
  * Revision 1.4  2004/06/30 20:29:03  dmorissette
@@ -512,6 +516,7 @@ static MapInfoBoundsInfo gasBoundsList[] = {
 {{8, 10, 7, {147,0,0.9996,500000,0,0}, 0,-128,481,664, {0,0,0,0,0}},  -7744844.06827594, -9996855.42233989, 8744844.06827593, 9996855.42233989},
 {{8, 10, 7, {15,0,1,5500000,0,0}, 0,582,105,414, {-1.04,-0.35,3.08,8.3,0}},  -2748143.32560618, -10000855.7646457, 13748143.3256062, 10000855.7646457},
 {{8, 10, 7, {15.8082777778,0,1,1500000,0,0}, 0,498,-36,568, {0,0,0,0,0}},  -6748143.32560618, -10000855.7646457, 9748143.32560618, 10000855.7646457},
+{{8, 10, 7, {15.8082777778,0,1,1500000,0,0}, 0,419.3836,99.3335,591.3451, {-0.850389, -1.817277, 7.862238, -0.99496, 0}},  -6748143.32560618, -10000855.7646457, 9748143.32560618, 10000855.7646457},
 {{8, 10, 7, {153,0,0.9996,500000,0,0}, 0,-128,481,664, {0,0,0,0,0}},  -7744844.06827594, -9996855.42233989, 8744844.06827594, 9996855.42233989},
 {{8, 10, 7, {154,26,0.9999,0,0,0}, 0,-128,481,664, {0,0,0,0,0}},  -8247318.51127362, -12876121.1385208, 8247318.51127362, 7123590.21961776},
 {{8, 10, 7, {159,0,0.9996,500000,0,0}, 0,-128,481,664, {0,0,0,0,0}},  -7744844.06827594, -9996855.42233989, 8744844.06827594, 9996855.42233989},
